# tet

./: Cargo.toml  LICENSE  README.md
src/: distribution.rs  lib.rs  optimal_alignments.rs
